--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -18,6 +18,33 @@
             <td th:utext="${person.getMonthOfBirth()}">...</td>
         </tr>
     </table>
+    <form action="/persons/create" method="post">
+        <div>
+            <label for="name">Имя друга</label>
+            <input name="name" id="name" />
+        </div>
+        <div>
+            <label for="dayOfBirth">День рождения</label>
+            <input name="dayOfBirth" id="dayOfBirth" />
+        </div>
+        <div>
+            <label for="monthOfBirth">Месяц рождения</label>
+            <input name="monthOfBirth" id="monthOfBirth" />
+        </div>
+        <div>
+            <button>Добавить друга</button>
+        </div>
+    </form>
+    <h2>Удаление</h2>
+    <form action="/persons/delete" method="post">
+        <div>
+            <label for="name_for_delete">Имя друга для удаления</label>
+            <input name="name" id="name_for_delete" />
+        </div>
+        <div>
+            <button>Удалить друга</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
